# BubbleBobbleRaylib

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Credit.txt  Notes.txt  README.md  vcpkg.json
res/: createNextLevel.sh  tiled-config.tiled-project  tiled-config.tiled-session
res/level_editor/: AirflowTilemap.tsx  AirflowTileset.tsx  EnemyTiles.tsx  EnemyTilesDirected.tsx  LevelBlocks.tsx  SpecialItems.tsx
res/levels/: Level001.json  Level002.json  Level003.json  Level004.json  Level005.json  Level006.json  Level007.json  Level008.json  Level009.json  Level010.json  Level011.json  Level012.json  Level013.json  Level014.json  Level015.json  Level016.json  Level017.json  Level018.json  Level019.json  Level020.json  Level021.json  Level022.json  Level023.json  Level024.json  Level025.json  Level026.json  Level028.json  Level029.json  Level030.json  Level031.json  Level032.json  Level033.json  Level059.json  Level060.json  Level1 Test Empty.json  Level1.json  Level101.json  Level102.json  Level103.json  Level104.json  (+10 more)
res/sounds/: Audio.json
res/sprites/: Animations.json  CustomSprites.json  LevelTiles.aseprite  LevelTiles.json  MainSpriteSheet.aseprite  MainSpriteSheet.json  NES - Bubble Bobble - Level Tiles.aseprite  NES - Bubble Bobble - Level Tiles.json
src/: main.cpp  pch.h
src/app/: Application.cpp  Application.h  Config.h  EventSystem.cpp  EventSystem.h  StateMachine.cpp  StateMachine.h  StateMachineGameStates.cpp  StateMachineGameStates.h  WindowConfig.h  main.cpp
src/audio/: Audio.cpp  Audio.h  AudioDevice.cpp  AudioDevice.h  AudioManager.cpp  AudioManager.h  AudioPlayer.cpp  AudioPlayer.h  AudioSystem.cpp  AudioSystem.h
src/behavior/: BossBehaviorSystem.cpp  BossBehaviorSystem.h  BubbleBehaviorSystem.cpp  BubbleBehaviorSystem.h  BubbleFloatBehaviorSystem.cpp  BubbleFloatBehaviorSystem.h  BubblePopBehaviorSystem.cpp  BubblePopBehaviorSystem.h  BubbleShootBehaviorSystem.cpp  BubbleShootBehaviorSystem.h  DragonBehaviorSystem.cpp  DragonBehaviorSystem.h  DragonHitBehaviorSystem.cpp  DragonHitBehaviorSystem.h  EnemyAppearanceBehaviorSystem.cpp  EnemyAppearanceBehaviorSystem.h  EnemyItemDiceBehaviorSystem.cpp  EnemyItemDiceBehaviorSystem.h  EnemyProjectileBehaviorSystem.cpp  EnemyProjectileBehaviorSystem.h  EnemyTumbleBehaviorSystem.cpp  EnemyTumbleBehaviorSystem.h  FlyingEnemyBehaviorSystem.cpp  FlyingEnemyBehaviorSystem.h  GameplayUISystem.cpp  GameplayUISystem.h  GameplayWatcherSystem.cpp  GameplayWatcherSystem.h  IntroSceneBehaviorSystem.cpp  IntroSceneBehaviorSystem.h  ItemPickupBehaviorSystem.cpp  ItemPickupBehaviorSystem.h  Level.cpp  Level.h  LevelInstantiatorSystem.cpp  LevelInstantiatorSystem.h  Physics.cpp  Physics.h  PopEnemyBubbleSystem.cpp  PopEnemyBubbleSystem.h  (+14 more)
src/ecs/: ComponentUtils.cpp  ComponentUtils.h  Components.cpp  Components.h  EntityFactory.cpp  EntityFactory.h  SystemBase.cpp  SystemBase.h  Systems.cpp  Systems.h
src/graphics/: Animations.cpp  Animations.h  RendererSystem.cpp  RendererSystem.h  Sprites.cpp  Sprites.h  Window.cpp  Window.h
src/level/: Dragons.cpp  Dragons.h  Enemies.cpp  Enemies.h  GameModifiers.cpp  GameModifiers.h  Items.cpp  Items.h  Level.cpp  Level.h  Physics.cpp  Physics.h
src/physics/: PhysicsSystem.cpp  PhysicsSystem.h
src/utils/: AnimatedObjects.h  Debug.cpp  Debug.h  Input.cpp  Input.h  Log.h  Random.cpp  Random.h  Recorder.cpp  Recorder.h  Utilities.cpp  Utilities.h
unusedSounds/DSSounds/: Credit.txt
